--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a techie, I enjoy most of my time being at home with my family and friends. Playing video games have been a long lasting hobby.</p>
+                    <p>Apart from being a techie, I enjoy most of my time being at home with my family and friends. Playing video games has been a long lasting hobby.</p>
                     <p class="mb-0">I enjoy listening to country music and I love watching movies.</p>
                 </div>
             </section>
