--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <span class="text-primary">Hussain</span>
                     </h1>
                     <div class="subheading mb-5">
-                        Nevadia Technology Ltd, Zindabazar, Sylhet.
+                        <a href="https://nevadiatechnology.com" target="_blank" class="btn btn-link">Nevadia Technology Ltd</a>, Zindabazar, Sylhet.
                         <a href="mailto:name@email.com">zakir.nevadia@gmail.com</a>
                     </div>
                     <p class="lead mb-5">This is Zakir Hussain from Sylhet, Bangladesh. I am a Software Engineer focused mainly on MSA design pattern and RESTful WebServices.</p>
