--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                             <div class="subheading mb-3">Nevadia Technology</div>
                             <p>I used to be the novice developer who is always eager to learn new tech stacks. I had found a home to hone my skills.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">November 2020 - December 2020</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">November 2019 - December 2019</span></div>
                     </div>
                     <!-- <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
@@ -167,7 +167,7 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
                     <p>Apart from being a techie, I enjoy most of my time being at home with my family and friends. Playing video games has been a long lasting hobby.</p>
-                    <p class="mb-0">I enjoy listening to country music and I love watching movies.</p>
+                    <p class="mb-0">I am very fond of country music and I love watching movies.</p>
                 </div>
             </section>
             <hr class="m-0" />
